--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,5 @@
 <div id="sidebar">
+  <img src="{{site.baseurl}}/assets/images/blog_pic.jpg" alt="Avatar"> 
 
   <header>
     <{% if page.layout == "index" %}h1{% else %}div{% endif %} class="site-title">
