--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,3 +11,10 @@
 p.light {
   font-weight: 50;
 }
+.container{
+    background-image: url('/assets/images/paper.gif');
+}
+
+.content{
+    background-image: url('/assets/images/paper.gif');
+}
