--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,3 +18,9 @@ p.light {
 .content{
     background-image: url('{{site.url}}/assets/images/paper.gif');
 }
+
+table, th, td{
+    border: 1px #2b2b2b solid;
+    background-image: url('{{site.url}}/assets/images/paper.gif');
+}
+
