--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,10 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   {% if page.thumbnail %}
-  <meta property="og:image" content={{page.thumbnail}}>
+  <meta property="og:image" content="{{page.thumbnail}}">
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="{{page.permalink}}" />
+  <meta property="og:title" content="{{page.title}}" />
   {% endif %}
 
 
