--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,3 +24,20 @@ table, th, td{
     background-image: url('{{site.url}}/assets/images/paper.gif');
 }
 
+.iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 50%;
+  background: lightgrey;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 1px solid black;
+}
