--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:url" content="{{page.permalink}}" />
   <meta property="og:title" content="{{page.title}}" />
+  <meta name="twitter:card" content="summary"></meta>
   {% endif %}
 
 
