add og description meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:url" content="{{page.permalink}}" />
   <meta property="og:title" content="{{page.title}}" />
-  <meta name="twitter:card" content="summary"></meta>
+  <meta property="og:description" content="{{site.title}} - {{site.description}}" />
   {% endif %}
 
 
